--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url("InterDisplay-Thin.woff2") format("woff2");
+  src: url("/InterDisplay-Thin.woff2") format("woff2");
 }
 
 @font-face {
@@ -35,7 +35,7 @@ body {
   font-style: italic;
   font-weight: 100;
   font-display: swap;
-  src: url("InterDisplay-ThinItalic.woff2") format("woff2");
+  src: url("/InterDisplay-ThinItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -43,7 +43,7 @@ body {
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url("InterDisplay-ExtraLight.woff2") format("woff2");
+  src: url("/InterDisplay-ExtraLight.woff2") format("woff2");
 }
 
 @font-face {
@@ -51,7 +51,7 @@ body {
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url("InterDisplay-ExtraLightItalic.woff2") format("woff2");
+  src: url("/InterDisplay-ExtraLightItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -59,7 +59,7 @@ body {
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("InterDisplay-Light.woff2") format("woff2");
+  src: url("/InterDisplay-Light.woff2") format("woff2");
 }
 
 @font-face {
@@ -67,7 +67,7 @@ body {
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url("InterDisplay-LightItalic.woff2") format("woff2");
+  src: url("/InterDisplay-LightItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -75,7 +75,7 @@ body {
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("InterDisplay-Regular.woff2") format("woff2");
+  src: url("/InterDisplay-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -83,7 +83,7 @@ body {
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url("InterDisplay-Italic.woff2") format("woff2");
+  src: url("/InterDisplay-Italic.woff2") format("woff2");
 }
 
 @font-face {
@@ -91,7 +91,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("InterDisplay-Medium.woff2") format("woff2");
+  src: url("/InterDisplay-Medium.woff2") format("woff2");
 }
 
 @font-face {
@@ -99,7 +99,7 @@ body {
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url("InterDisplay-MediumItalic.woff2") format("woff2");
+  src: url("/InterDisplay-MediumItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -107,7 +107,7 @@ body {
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("InterDisplay-SemiBold.woff2") format("woff2");
+  src: url("/InterDisplay-SemiBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -115,7 +115,7 @@ body {
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url("InterDisplay-SemiBoldItalic.woff2") format("woff2");
+  src: url("/InterDisplay-SemiBoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -123,7 +123,7 @@ body {
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("InterDisplay-Bold.woff2") format("woff2");
+  src: url("/InterDisplay-Bold.woff2") format("woff2");
 }
 
 @font-face {
@@ -131,7 +131,7 @@ body {
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url("InterDisplay-BoldItalic.woff2") format("woff2");
+  src: url("/InterDisplay-BoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -139,7 +139,7 @@ body {
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url("InterDisplay-ExtraBold.woff2") format("woff2");
+  src: url("/InterDisplay-ExtraBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -147,7 +147,7 @@ body {
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: url("InterDisplay-ExtraBoldItalic.woff2") format("woff2");
+  src: url("/InterDisplay-ExtraBoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -155,7 +155,7 @@ body {
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url("InterDisplay-Black.woff2") format("woff2");
+  src: url("/InterDisplay-Black.woff2") format("woff2");
 }
 
 @font-face {
@@ -163,7 +163,7 @@ body {
   font-style: italic;
   font-weight: 900;
   font-display: swap;
-  src: url("InterDisplay-BlackItalic.woff2") format("woff2");
+  src: url("/InterDisplay-BlackItalic.woff2") format("woff2");
 }
 
 /* stylelint-disable property-no-unknown */
