--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 /* stylelint-disable scss/at-rule-no-unknown */
 @import "tailwindcss";
-@import "./styles/breakpoints.css";
-@import "./styles/colors.css";
-@import "./styles/typography.css";
-@import "./styles/theme.css";
 @import "./styles/fonts.css";
+@import "./styles/keyframes.css";
 @import "./styles/layers.css";
+@import "./styles/theme.css";
+@import "./styles/typography.css";
+@import "./styles/variables.css";
 
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
